2026-01-18  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* src/devices/gropdf/gropdf.pl (.pdf*href): For external
	hotspot links (.pdfhref W  [-D URI] [-P prefix-text] \
	[-A affixed-text] [--] [hotlink text]), if no 'hotlink text'
	is specified but an URI is given, use it as the text
	rather than 'Unknown'.

	Fixes <https://savannah.gnu.org/bugs/?67916>. Thanks to
	Branden Robinson for the suggested improvement.

2026-01-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.1.man (Macros) <pdfbookmark>
	<pdfnote, pdhref>: Document macros.

	Fixes <https://savannah.gnu.org/bugs/?66453>.  Thanks to Deri
	James for supplying an overview of features in Savannah #67665.

2026-01-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.1.man (Usage): Drop references to
	Keith Marshall's "pdfmark" macro package; it is now maintained
	separately from groff, and some of the claims had become stale.

	Fixes <https://savannah.gnu.org/bugs/?67911>.  Thanks to Bjarni
	Ingi Gislason for the report.

2026-01-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	[pic]: Improve fix for Savannah #67899.

	* src/preproc/pic/lex.cpp (interpolate_macro_with_args): Shift
	more logic inside the `!ignore` conditional; this way we
	correctly handle the case of a non-empty 33rd macro argument.
	We were no longer smashing the stack with a list of pointers of
	user-controlled length, but we were permitting the stack memory
	at a location one past the end of the `argv` array to be
	written to.

	Continues fixing <https://savannah.gnu.org/bugs/?67899>.

2026-01-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Bump ending year of copyright
	notice to 2026 to reflect (presumably) copyrightable changes in
	the source tree as a whole since December 31.  See "Updating
	Copyright Notices" in our "HACKING" file.

2026-01-01  G. Branden Robinson <g.branden.robinson@gmail.com>
